a few updates from klone

--- a/experiments/make_reassembly_dataset/settings.cfg
+++ b/experiments/make_reassembly_dataset/settings.cfg
@@ -1,5 +1,5 @@
 [CONFIG]
-save_path = ~/.cache/ltron/collections/random_six/rollouts
-dataset = random_six
-train_split = medium_single
-num_seqs = 32
+save_path = /gscratch/ravin/awalsman/.cache/ltron/collections/omr_split_4/rollouts
+dataset = omr_split_4
+train_split = all
+num_seqs = 100
