updates for K-men

--- a/experiments/make_reassembly_dataset/settings.cfg
+++ b/experiments/make_reassembly_dataset/settings.cfg
@@ -1,5 +1,8 @@
 [CONFIG]
-save_path = /gscratch/ravin/awalsman/.cache/ltron/collections/omr_split_4/rollouts
 dataset = omr_split_4
+collection = omr_split_4
 train_split = all
-num_seqs = 100
+#file_override = ./no_path_found_000599.mpd
+#start = 21734
+#end = 43248
+#error_handling = pdb
