--- a/experiments/reassembly_teacher_forcing/settings.cfg
+++ b/experiments/reassembly_teacher_forcing/settings.cfg
@@ -1,9 +1,11 @@
 [CONFIG]
 epochs = 5000
-batch_size = 16
+batch_size = 2
+num_envs = 1
 loader_workers = 0
 checkpoint_frequency = 1000000
-visualization_frequency = 10
-dataset = random_six
-train_split = simple_single_seq
-test_frequency = 10
+visualization_frequency = 1
+dataset = omr_split_4
+train_split = train_rollouts
+test_split = train
+test_frequency = 1
