before cleaning up a few things

--- a/experiments/make_reassembly_dataset/settings.cfg
+++ b/experiments/make_reassembly_dataset/settings.cfg
@@ -4,5 +4,6 @@ collection = omr_split_4
 train_split = all
 #file_override = ./no_path_found_000599.mpd
 #start = 21734
-#end = 43248
+start = 400
+end = 5406
 #error_handling = pdb
