--- a/experiments/reassembly_teacher_forcing/settings.cfg
+++ b/experiments/reassembly_teacher_forcing/settings.cfg
@@ -1,11 +1,13 @@
 [CONFIG]
 epochs = 5000
-batch_size = 2
+batch_size = 1
 num_envs = 1
 loader_workers = 0
-checkpoint_frequency = 1000000
-visualization_frequency = 1
+checkpoint_frequency = 10
 dataset = omr_split_4
 train_split = train_rollouts
+train_subset = 700
+test_subset = 700
 test_split = train
-test_frequency = 1
+test_frequency = 10
+visualization_frequency = 10
