updates for Muru

--- a/experiments/make_reassembly_dataset/settings.cfg
+++ b/experiments/make_reassembly_dataset/settings.cfg
@@ -1,9 +1,12 @@
 [CONFIG]
-dataset = omr_split_4
-collection = omr_split_4
-train_split = all
+dataset = omr_clean
+collection = omr_clean
+train_split = pico
+rollout_directory = rollouts
+randomize_viewpoint = 0
+randomize_colors = 0
 #file_override = ./no_path_found_000599.mpd
 #start = 21734
-start = 400
-end = 5406
-#error_handling = pdb
+#start = 38
+#end = 5406
+#error_handling = raise
