for move to hyak

--- a/experiments/disassembly_resnet_bc/settings.cfg
+++ b/experiments/disassembly_resnet_bc/settings.cfg
@@ -1,15 +1,15 @@
 [CONFIG]
 epochs = 5000
-batch_size = 4
-num_envs = 4
+batch_size = 2
+num_envs = 2
 loader_workers = 0
 checkpoint_frequency = 10000000
 dataset = omr_clean
-train_split = rollouts
+train_split = carbon_star_rollouts
 #train_subset = 
-test_split = pico
+test_split = carbon_star
 #test_subset = 
-test_frequency = 100
-visualization_frequency = 100
+test_frequency = 10
+visualization_frequency = 10
 randomize_viewpoint = 0
 randomize_colors = 0
