--- a/experiments/make_reassembly_dataset/settings.cfg
+++ b/experiments/make_reassembly_dataset/settings.cfg
@@ -1,8 +1,8 @@
 [CONFIG]
 dataset = omr_clean
 collection = omr_clean
-train_split = pico
-rollout_directory = rollouts
+train_split = carbon_star
+rollout_directory = rollouts_carbon_star
 randomize_viewpoint = 0
 randomize_colors = 0
 #file_override = ./no_path_found_000599.mpd
