--- a/experiments/make_reassembly_dataset/settings.cfg
+++ b/experiments/make_reassembly_dataset/settings.cfg
@@ -1,10 +1,10 @@
 [CONFIG]
 dataset = omr_clean
 collection = omr_clean
-train_split = carbon_star
-rollout_directory = rollouts_carbon_star
-randomize_viewpoint = 0
-randomize_colors = 0
+train_split = micro
+rollout_directory = rollouts_micro
+randomize_viewpoint = 1
+randomize_colors = 1
 #file_override = ./no_path_found_000599.mpd
 #start = 21734
 #start = 38
