classId_only_prediction

--- a/experiments/pretrainbackbone_resnet/settings.cfg
+++ b/experiments/pretrainbackbone_resnet/settings.cfg
@@ -5,7 +5,7 @@ learning_rate = 3e-4
 loader_workers = 0
 checkpoint_frequency = 10000000
 dataset = omr_clean
-train_split = rollouts_frames
+train_split = rollouts_hr
 train_subset = 500
 test_split = pico
 #test_subset =
