--- a/experiments/pretrainbackbone_resnet/settings.cfg
+++ b/experiments/pretrainbackbone_resnet/settings.cfg
@@ -1,11 +1,11 @@
 [CONFIG]
 epochs = 500
-batch_size = 4
+batch_size = 8
 learning_rate = 3e-4
 loader_workers = 0
-checkpoint_frequency = 10000000
+checkpoint_frequency = 10
 dataset = omr_clean
-train_split = rollouts_hr
+train_split = rollouts_frames
 train_subset = 500
 test_split = pico
 #test_subset =
