Deeplabv3 color prediction

--- a/experiments/pretrainbackbone_resnet/settings.cfg
+++ b/experiments/pretrainbackbone_resnet/settings.cfg
@@ -1,14 +1,14 @@
 [CONFIG]
-epochs = 500
+epochs = 50
 batch_size = 8
 learning_rate = 3e-4
 loader_workers = 0
-checkpoint_frequency = 10
+checkpoint_frequency = 25
 dataset = omr_clean
 train_split = rollouts_frames
-train_subset = 500
-test_split = pico
-#test_subset =
+train_subset = 10000
+test_split = rollouts_test
+test_subset = 100
 test_frequency = 100
 visualization_frequency = 100
 optimizer = adamw
