--- a/experiments/make_reassembly_dataset/settings.cfg
+++ b/experiments/make_reassembly_dataset/settings.cfg
@@ -1,10 +1,13 @@
 [CONFIG]
-dataset = omr_clean
-collection = omr_clean
-train_split = micro
-rollout_directory = rollouts_micro
+dataset = random_construction_6_6
+#collection = random_construction_6_6
+split = all
+#rollout_directory = episodes
 randomize_viewpoint = 1
 randomize_colors = 1
+include_score = False
+dataset_reset_mode = single_pass
+tile_color_render = True
 #file_override = ./no_path_found_000599.mpd
 #start = 21734
 #start = 38
