--- a/experiments/pretrainbackbone_resnet/settings.cfg
+++ b/experiments/pretrainbackbone_resnet/settings.cfg
@@ -1,14 +1,14 @@
 [CONFIG]
-epochs = 50
-batch_size = 8
-learning_rate = 3e-4
+epochs = 15
+batch_size = 16
+learning_rate = 3e-5
 loader_workers = 0
-checkpoint_frequency = 25
+checkpoint_frequency = 5
 dataset = omr_clean
-train_split = rollouts_frames
-train_subset = 10000
-test_split = rollouts_test
-test_subset = 100
+train_split = rollouts_rc66_first
+train_subset = 50000
+test_split = rollouts_rc66_first_test
+test_subset = 10000
 test_frequency = 100
 visualization_frequency = 100
 optimizer = adamw
