--- a/experiments/pretrainbackbone_resnet/settings.cfg
+++ b/experiments/pretrainbackbone_resnet/settings.cfg
@@ -5,7 +5,7 @@ learning_rate = 3e-5
 loader_workers = 0
 checkpoint_frequency = 5
 dataset = omr_clean
-train_split = rollouts_rc66_first
+train_split = rollouts_rc66
 train_subset = 50000
 test_split = rollouts_rc66_first_test
 test_subset = 10000
